hard-gists/a68d6f32f4985ed547ce/run.log
=== Docker Run Log for a68d6f32f4985ed547ce ===
Started at: Mi 29. Okt 19:05:52 CET 2025

[2025-10-29 19:05:52] START: Running container for a68d6f32f4985ed547ce
[2025-10-29 19:05:53] SUCCESS: Container 7a028992cc85fc82685252f0ed52c97f09e8e89b2ac41c0c932d0c3266b28b06 started for a68d6f32f4985ed547ce
=== Container logs for a68d6f32f4985ed547ce ===
  File "/snippet.py", line 78
    print "Skipping: {0}".format(table)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a68d6f32f4985ed547ce ===
[2025-10-29 19:05:55] INFO: Container 7a028992cc85fc82685252f0ed52c97f09e8e89b2ac41c0c932d0c3266b28b06 has stopped
